[gd_scene load_steps=15 format=3 uid="uid://d145q5v5gf7uh"]

[ext_resource type="Script" path="res://Scripts/Enemies/FSM/BOSSDOGS/DOG1/Dog1.gd" id="1_xme34"]
[ext_resource type="Script" path="res://Scripts/Enemies/FSM/FSM.gd" id="2_0u66c"]
[ext_resource type="Texture2D" uid="uid://c0f2ghhvt5h8k" path="res://Art/BODD/perseguidor-AnimationSheet.png" id="2_l0c2s"]
[ext_resource type="Script" path="res://Scripts/Enemies/FSM/BOSSDOGS/DOG1/Idle_dog1.gd" id="3_4blpt"]
[ext_resource type="Script" path="res://Scripts/Enemies/FSM/BOSSDOGS/DOG1/Follow.gd" id="4_5dkaf"]
[ext_resource type="Script" path="res://Scripts/Enemies/FSM/BOSSDOGS/DOG1/AttackD1.gd" id="6_cicpi"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_h5rug"]
radius = 31.0
height = 128.0

[sub_resource type="Animation" id="Animation_rov1h"]
resource_name = "Attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1), Vector2i(6, 1), Vector2i(7, 1), Vector2i(8, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_tcr2n"]
resource_name = "Follow"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2), Vector2i(4, 2), Vector2i(5, 2), Vector2i(6, 2), Vector2i(7, 2), Vector2i(8, 2), Vector2i(8, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_qac04"]
resource_name = "Idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 3, 5, 6, 7, 8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_7bc4j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 1)]
}

[sub_resource type="Animation" id="Animation_y4j5m"]
resource_name = "death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hww2l"]
_data = {
"Attack": SubResource("Animation_rov1h"),
"Follow": SubResource("Animation_tcr2n"),
"Idle": SubResource("Animation_qac04"),
"RESET": SubResource("Animation_7bc4j"),
"death": SubResource("Animation_y4j5m")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_fmti7"]
radius = 53.0094

[node name="dog1" type="CharacterBody2D"]
script = ExtResource("1_xme34")

[node name="Node2D" type="Node2D" parent="."]
rotation = -1.5708

[node name="Sprite2D" type="Sprite2D" parent="Node2D"]
texture_filter = 1
texture = ExtResource("2_l0c2s")
hframes = 9
vframes = 3
frame = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_h5rug")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Node2D/Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_hww2l")
}
autoplay = "Idle"

[node name="Detector1" type="RayCast2D" parent="."]
target_position = Vector2(0, 250)

[node name="Detector2" type="RayCast2D" parent="."]
target_position = Vector2(0, 150)

[node name="FSM" type="Node2D" parent="."]
script = ExtResource("2_0u66c")
attack = 100

[node name="Idle" type="Node2D" parent="FSM"]
script = ExtResource("3_4blpt")

[node name="Follow" type="Node2D" parent="FSM"]
script = ExtResource("4_5dkaf")

[node name="Attack" type="Node2D" parent="FSM"]
script = ExtResource("6_cicpi")

[node name="Death" type="Node2D" parent="FSM"]

[node name="debug" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_fmti7")

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
